--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css">
+    <link 
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Roboto+Slab">
+    
+    <link rel="stylesheet" href="index.css" />
+    
+
+    <script defer src="render.js"></script>
   </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+  <body class="content">
+
+    <h1>🎥 Screen Capture using Electron ⚡ </h1>
+
+    <video></video>
+
+    <button id="startBtn" class="button is-primary">Start</button>
+    <button id="stopBtn" class="button is-warning">Stop</button>
+
+    <hr />
+
+    <button id="videoSelectBtn" class="button is-text">
+      Choose a Video Source
+    </button>
+
   </body>
 </html>
